# Tesseract

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  compile.sh  imgui.ini  install.sh  log.txt  note.txt  purge.sh  tesseract
assets/shaders/: Texture.glsl
include/Tesseract/: TesseractLayer.hpp
include/core/: Application.hpp  Core.hpp  Event.hpp  ImGuiLayer.hpp  Input.hpp  Layer.hpp  LayerStack.hpp  Logger.hpp  Timestep.hpp  Window.hpp
include/core/Asset/: AssetManager.hpp
include/core/Camera/: OrthographicCamera.hpp
include/core/Events/: ApplicationEvent.hpp  KeyEvent.hpp  MouseEvent.hpp
include/core/ImGui/: ImGuiLayer.hpp
include/core/Renderer/: Buffer.hpp  OpenGLShader.hpp  OrthographicCamera.hpp  RenderCommand.hpp  Renderer2D.hpp  RendererAPI.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp
include/ecs/: ComponentArray.hpp  ComponentManager.hpp  Components.hpp  Core.hpp  ECS.hpp  Entity.hpp  EntityManager.hpp  Registry.hpp  System.hpp
include/ecs/Systems/: MovementSystem.hpp  RenderSystem.hpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake  imgui.ini  main.cpp
src/Sandbox/: SandboxApp.cpp
src/Tesseract/: TesseractApp.cpp  TesseractLayer.cpp
src/core/: Application.cpp  EntryPoint.cpp  ImGuiLayer.cpp  Input.cpp  Layer.cpp  LayerStack.cpp  Logger.cpp  Window.cpp
src/core/Asset/: AssetManager.cpp
src/core/Camera/: OrthographicCamera.cpp
src/core/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp
src/core/Renderer/: Buffer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp  OrthographicCamera.cpp  RenderCommand.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  VertexArray.cpp
src/core/events/: Event.cpp
